# minecraft-ios-mod

./: CMakeLists.txt
.github/workflows/: build.yml
scripts/: find_offsets.py
src/: AntiPiracyCheck.mm  ClientUIManager.cpp  ClientUIManager.hpp  HookInit.cpp  HookInit.hpp  NetworkGuard.cpp  NetworkGuard.hpp  OffsetConfig.cpp  OffsetConfig.h  VerificationBridge.h  XboxAuthFix.cpp  XboxAuthFix.hpp  XboxAuthFix.mm  fishhook.c  fishhook.h  stb_image.c  stb_image.h
src/api/: APIScreen.h  APIScreen.mm  Hardweight.cpp  Hardweight.h  Paperweight.cpp  Paperweight.h
